# Zoomcamp-MidTerm-Project

./: .gitignore  Dockerfile  README.md  predict.py  pyproject.toml  serve.py  test.py  train.py
models/: label_encoder.pkl  tfidf.pkl
notebooks/: main.ipynb
